0.9.0/_sources/generated/statsmodels.tsa.statespace.sarimax.SARIMAXResults.rst.txt
statsmodels.tsa.statespace.sarimax.SARIMAXResults
=================================================

.. currentmodule:: statsmodels.tsa.statespace.sarimax

.. autoclass:: SARIMAXResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~SARIMAXResults.aic
    
    
      ~SARIMAXResults.arfreq
    
    
      ~SARIMAXResults.arparams
    
    
      ~SARIMAXResults.arroots
    
    
      ~SARIMAXResults.bic
    
    
      ~SARIMAXResults.bse
    
    
      ~SARIMAXResults.conf_int
    
    
      ~SARIMAXResults.cov_params
    
    
      ~SARIMAXResults.cov_params_approx
    
    
      ~SARIMAXResults.cov_params_oim
    
    
      ~SARIMAXResults.cov_params_opg
    
    
      ~SARIMAXResults.cov_params_robust
    
    
      ~SARIMAXResults.cov_params_robust_approx
    
    
      ~SARIMAXResults.cov_params_robust_oim
    
    
      ~SARIMAXResults.f_test
    
    
      ~SARIMAXResults.fittedvalues
    
    
      ~SARIMAXResults.forecast
    
    
      ~SARIMAXResults.get_forecast
    
    
      ~SARIMAXResults.get_prediction
    
    
      ~SARIMAXResults.hqic
    
    
      ~SARIMAXResults.impulse_responses
    
    
      ~SARIMAXResults.info_criteria
    
    
      ~SARIMAXResults.initialize
    
    
      ~SARIMAXResults.llf
    
    
      ~SARIMAXResults.llf_obs
    
    
      ~SARIMAXResults.load
    
    
      ~SARIMAXResults.loglikelihood_burn
    
    
      ~SARIMAXResults.mafreq
    
    
      ~SARIMAXResults.maparams
    
    
      ~SARIMAXResults.maroots
    
    
      ~SARIMAXResults.normalized_cov_params
    
    
      ~SARIMAXResults.plot_diagnostics
    
    
      ~SARIMAXResults.predict
    
    
      ~SARIMAXResults.pvalues
    
    
      ~SARIMAXResults.remove_data
    
    
      ~SARIMAXResults.resid
    
    
      ~SARIMAXResults.save
    
    
      ~SARIMAXResults.seasonalarparams
    
    
      ~SARIMAXResults.seasonalmaparams
    
    
      ~SARIMAXResults.simulate
    
    
      ~SARIMAXResults.summary
    
    
      ~SARIMAXResults.t_test
    
    
      ~SARIMAXResults.t_test_pairwise
    
    
      ~SARIMAXResults.test_heteroskedasticity
    
    
      ~SARIMAXResults.test_normality
    
    
      ~SARIMAXResults.test_serial_correlation
    
    
      ~SARIMAXResults.tvalues
    
    
      ~SARIMAXResults.wald_test
    
    
      ~SARIMAXResults.wald_test_terms
    
    
      ~SARIMAXResults.zvalues
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~SARIMAXResults.use_t
   
   